# beans

./: .cvsignore  Build  Build.PL  Changes  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  README  beans.conf  dist.ini  repl.rc
_build/: cleanup
beans/branches/Grades/: Build.PL
beans/branches/class/: Makefile.PL  (+1 more)
beans/trunk/: Build.PL  Changes  MANIFEST  README  beans.conf  dist.ini  repl.rc
blib/lib/: Grades.pm
lib/: Bean.pm  Grades.pm
lib/Grades/: Groupwork.pm  Types.pm
lib/beans/: Homework.pm
root/src/: classwork.tt2  classwork_listing.tt2  exams_listing.tt2  grades.tt2  grades_listing.tt2  homework.tt2  homework_listing.tt2  rawclasswork.tt2  rawexam.tt2
script_files/: anterior_data.pl  beans_server.pl  champs2front.hs  champs_2L1.hs  champs_FLA0003.hs  champs_FLA0008.hs  champs_FLA0011.hs  champs_FLA0024.hs  champs_KB1.hs  champs_MB1.hs  checkAnswers.pl  classwork  create_groups.pl  grade_jigsaw.pl  grades  grades.rc  homework  id2names.pl  letter2name.pl  print_cans.pl  print_grades.pl  print_ids.pl  scantron.pl  school_data.pl  score_exam.pl  score_homework.pl  score_jigsaw.pl  sum_g12.pl  sum_g1_g2.pl
script_files/champs/: LICENSE  champs2front.hs  champs_2L1.hs  champs_FLA0003.hs  champs_FLA0008.hs  champs_FLA0011.hs  champs_FLA0024.hs  champs_KB1.hs  champs_MB1.hs
script_files/point/: champs.cabal  champs2front.hs  champs_FLA0008.hs  champs_KB1.hs
t/: 00-load.t  01app.t  boilerplate.t  classwork.t  emile.t  homework.t
t/emile/: league.yaml
trunk/: beans.conf
trunk/script_files/: beans_create.pl  grades.rc  score_jigsaw.pl
(+213 files in other folders)
